# PardusDB

./: --help  --version  .gitignore  Cargo.toml  LICENSE  README.md  go.mod  main.c  main.go  main.py  query.sh  readme.md  setup.sh  test.sh
db/: db.go  db_test.go
embed/: vector.go
examples/: simple_rag.rs  test_features.rs
examples/python/: simple_rag.py
graph/: graph.go
inference/: inference.c  inference.go  inference.h
mcp/: README.md  package.json  tsconfig.json
mcp/src/: index.ts
model/: llama.go
net/: net.go
pardus/: Cargo.toml
pardus/src/: main.rs
pardus/src/net/: mod.rs  net.rs
sdk/python/: README.md  pyproject.toml  pytest.ini
sdk/python/pardusdb/: __init__.py  client.py  errors.py
sdk/python/tests/: test_pardusdb.py
sdk/typescript/pardusdb/: README.md  jest.config.js  package.json  tsconfig.json
sdk/typescript/pardusdb/src/: index.test.ts  index.ts
skill/: skill.md
src/: concurrent.rs  database.rs  db.rs  distance.rs  error.rs  gpu.rs  graph.rs  lib.rs  main.rs  node.rs  parser.rs  prepared.rs  schema.rs  storage.rs  table.rs
src/shaders/: cosine.wgsl  dot.wgsl  euclidean.wgsl
tests/: bug_dimension_mismatch.rs  concurrent_test.rs  database_test.rs  sql_parser_test.rs
vectordb/: db.go
