[package]
name = "pardusdb"
version = "0.1.0"
edition = "2024"

[dependencies]
memmap2 = "0.9"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# GPU acceleration (optional)
wgpu = { version = "24.0", optional = true }
bytemuck = { version = "1.21", features = ["derive"], optional = true }
pollster = { version = "0.4", optional = true }
async-trait = { version = "0.1", optional = true }

[features]
default = []
gpu = ["wgpu", "bytemuck", "pollster", "async-trait"]

[dev-dependencies]
rand = "0.8"
tempfile = "3"
