[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pardusdb"
version = "0.1.0"
description = "Python SDK for PardusDB - A fast, SQLite-like embedded vector database"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Pardus AI", email = "hello@pardusai.org"}
]
keywords = ["vector", "database", "embeddings", "similarity-search", "rag", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/pardus-ai/pardusdb"
Documentation = "https://github.com/pardus-ai/pardusdb#readme"
Repository = "https://github.com/pardus-ai/pardusdb"

[tool.setuptools.packages.find]
where = ["."]
include = ["pardusdb*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
